# xmman

./: .gitignore  .gitlab-ci.yml  Makefile.am  README.md  ScrollByL.c  buttons.c  configure.ac  defs.h  globals.c  globals.h  handler.c  help.c  icon_help.h  icon_open.h  main.c  man.c  man.h  misc.c  scroll_motive.c  scroll_motive.h  scroll_motiveP.h  search.c  strlcat.c  strlcpy.c  tkfuncs.c  vendor.c  vendor.h  xft_utils.c  xft_utils.h  xman.help  xman_fonts.c  xman_fonts.h  xmman.help  xmman_fonts.c  xmman_fonts.h
.sisyphus/: boulder.json
.sisyphus/notepads/xman-motif-conversion/: decisions.md  issues.md  learnings.md  problems.md
.sisyphus/plans/: xman-motif-conversion.md
app-defaults/: XmMan  Xman  Xmman
man/: Makefile.am  xman.man  xmman.man
